Improve error messages

--- a/che-core-git-impl-jgit/src/main/resources/org/eclipse/che/git/impl/jgit/messages.properties
+++ b/che-core-git-impl-jgit/src/main/resources/org/eclipse/che/git/impl/jgit/messages.properties
@@ -25,6 +25,8 @@ ERROR_PULL_AUTO_MERGE_FAILED=Automatic merge failed; fix conflicts and then comm
 ERROR_PULL_MERGE_CONFLICT_IN_FILES=Could not pull because a merge conflict is detected in the files:
 ERROR_PULL_COMMIT_BEFORE_MERGE=Could not pull. Commit your changes before merging.
 
+ERROR_STATUS_NOT_GIT_REPO=Could not retrieve the Git status because {0} is not a Git folder.
+
 ERROR_TAG_DELETE=Could not delete the tag {0}. An error occurred: {1}.
 
 ERROR_INIT_FOLDER_MISSING=The working folder {0} does not exist.
